<resources>
    <string name="app_name">HealthHunt</string>
    <string name="server_client_id">415941616381-aqtf7rcsr1mskdpv57519e440882fcbq.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2014330465547457</string>
    <string name="fb_login_protocol_scheme">fb2014330465547457</string>
    <string name="youtube_key">AIzaSyAOaVvQF0liphCcch2futZMQvrdVUi-WYQ</string>
    <string name="google_place_key">AIzaSyAOaVvQF0liphCcch2futZMQvrdVUi-WYQ</string>

    <!-- AIzaSyDFVYeZ2vDLyraV2KcMEsC6THxxFh_2vMI           //youtube key-->
    <!--473972138506-lvt76674edq0is3r38qpbeqt1p82sjs6.apps.googleusercontent.com-->
    <!-- Font family -->

    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>

    <!-- Login and sign up screen string values -->

    <string name="skip">Skip</string>
    <string name="healthhunt">healthhunt</string>
    <string name="login_with">Login with</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bio">Bio</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signup_with">Sign Up with</string>
    <string name="receive_product_offer">Receive product offers and discount offers on marketplace</string>
    <string name="terms_and_conditions_part1">By signing up, you agree to</string>
    <string name="terms_and_conditions_part2"> Terms and Conditions and Privacy Policy </string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="please_wait">Please Wait</string>
    <string name="setup_new_password">Set Up new password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="alert">Alert!</string>
    <string name="try_again">Try again</string>
    <string name="email_validation_msg">Please enter Valid Email</string>
    <string name="password_validation_msg">Please enter Password</string>
    <string name="username_validation_msg">Please enter Username(First name or Last name)</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>



    <!-- Tags screen string values -->

    <string name="select_at_least_5_tags">Select at least 5 tags to personalize your feed</string>  <!-- You\'re almost done! -->
    <string name="done">Done</string>
    <string name="search_by_tags">Search by tags</string>
    <string name="select_all">Select all</string>
    <string name="exercise">Exercise</string>
    <string name="enter_the_city">Enter the city</string>


    <!-- OnBoarding screen string values -->

    <string name="explore_new_things">Explore a lot of new things about mental and physical health</string>
    <string name="get_started">Get started</string>
    <string name="swipe_left_and_right">Swipe left and right</string>
    <string name="swipe_right_back">Swipe right to go back to previous page</string>

    <!-- Alert Screen message for email sent -->

    <string name="link_sent">A link to reset your password has been sent to  </string>

    <!-- Home Screen -->

    <string name="view_all">View all</string>
    <string name="my_feed">My feed</string>
    <string name="my_hunts">My hunts</string>
    <string name="watch">Watch</string>
    <string name="shop">Shop</string>
    <string name="choose_category">Choose categories to show</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Full article Screen -->

    <string name="about">About</string>
    <string name="read_more">See more</string>
    <string name="read_less">See less</string>
    <string name="comments">Comments</string>
    <string name="write_comments_here">Write your comment here</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="rs">\u20B9</string>
    <string name="read_time">%s min read</string>
    <string name="close_all">Close all</string>
    <string name="healthhunt_shop_content">Organic food, yoga practitioners, relaxing spa massages, healthy snacking items, reflexology sessions, and much more… you will find all of this at one place – healthhunt shop! Whether you are looking to connect with newer audience or for the latest, healthy products and services – healthhunt shop is for you! View your saved items and collections here!</string>
    <string name="healthhunt_my_hunts_content">My hunts let you view your saved and received cards</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="buy">Buy</string>

    <string name="share">Share</string>
    <string name="download_this_article">Download this article</string>
    <string name="download_this_product">Download this product</string>
    <string name="Shipping_charges_apply">Shipping charges apply</string>
    <string name="Loose_Square_Marketing">Loose Square Marketing Solutions</string>


    <!-- shop -->
    <string name="healthhunt_shop">Healthhunt shop</string>
    <string name="filter">Filter</string>
    <string name="product">Product</string>
    <string name="city">City</string>
    <string name="brancd_name">Brand name</string>
    <string name="remove">Remove</string>
    <string name="apply">Apply</string>
    <string name="search_by_product_type">Search by product type</string>
    <string name="search_by_brand_name">Search by brand name</string>



    <!-- my hunts -->
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="removed">Removed</string>
    <string name="approved">Approved</string>
    <string name="received">Received</string>
    <string name="downloaded">Downloaded</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="questions">Questions</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change profile photo</string>

    <!-- You Tube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>


    <string name="related_articles">Related articles</string>
    <string name="related_products">Related products</string>
    <string name="posted_in">posted in</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log Out</string>
    <string name="tags">Tags</string>
    <string name="options">Options</string>
    <string name="selected_tags">Selected tags</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="search_result">Search result</string>
    <string name="share_successfully">Shared successfully</string>
    <string name="downloaded_successfully">Downloaded successfully"</string>
    <string name="already_downloaded">Already downloaded"</string>
    <string name="tags_saved_successfully">Tags saved successfully</string>
    <string name="no_records_found">no records found</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="free_trial">Free Trial</string>
    <string name="listen">Listen</string>

    <string name="added_to_my_hunt">Added to my hunt</string>
    <string name="removed_from_my_hunt">Removed from my hunt</string>

</resources>
