<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hh_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_regular"
                android:textSize="16dp"
                android:gravity="left|center"
                android:textColor="@color/hh_text_color"
                android:text="@string/product"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:id="@+id/product_arrow_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_chevron_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="center"
                />
            <ViewStub
                android:id="@+id/product_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_regular"
                android:textSize="16dp"
                android:gravity="left|center"
                android:textColor="@color/hh_text_color"
                android:text="@string/brancd_name"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:id="@+id/brand_arrow_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_chevron_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="center"
                />

            <ViewStub
                android:id="@+id/brand_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_regular"
                android:textSize="16dp"
                android:gravity="left|center"
                android:textColor="@color/hh_text_color"
                android:text="@string/city"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:id="@+id/city_arrow_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_chevron_down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="center"
                />

            <ViewStub
                android:id="@+id/city_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="right|center"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_medium"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/remove"
            android:textColor="#42000000"
            android:layout_marginEnd="28dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_medium"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="@color/hh_green_light2"
            />

    </LinearLayout>

</RelativeLayout>