<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/tag_activity_top_view"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#4D000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="1dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_at_least_5_tags"
                    android:textSize="16dp"
                    android:fontFamily="@string/font_family_regular"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center"
                    android:textColor="@color/hh_text_color_primary"/>
            </LinearLayout>

           <include layout="@layout/search_view"/>

            <TextView
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/select_all"
                android:layout_gravity="right"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="14dp"
                android:textSize="14dp"
                android:gravity="center"
                android:fontFamily="@string/font_family_medium"
                android:textColor="@color/hh_text_color"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/tags_recycler_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="24dp">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>