<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_profile_tag_view_item"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="left|center"
                android:gravity="left|center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:textSize="20dp"
                    android:gravity="left"
                    android:text="@string/selected_tags"
                    android:textColor="@color/hh_edittext_text_color"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/tag_count"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:fontFamily="@string/font_family_regular"
                    android:textSize="16sp"
                    android:gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/hh_text_color"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <TextView
                android:id="@+id/saved"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@string/font_family_regular"
                android:textSize="14sp"
                android:gravity="right|bottom"
                android:text="@string/saved"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/hh_edittext_hint_color"/>

        </LinearLayout>
        <include layout="@layout/search_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>


        <include layout="@layout/fragment_tag"></include>
    </LinearLayout>
</LinearLayout>