<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abhishekkumar.sample_healthhunt.LoginActivity">


    <include
        android:id="@+id/login_sub_view"
        layout="@layout/login_signup_skip_view"></include>


    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_with" />


        <include layout="@layout/login_with_facebook_gmail_view"></include>

        <Button
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:text="@string/forgot_your_password"
            android:layout_marginTop="2dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/dont_have_an_account" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/signup" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
